# ETLPlus

./: .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  AGENTS.md  CI-CD-WORKFLOWS.md  CODE_OF_CONDUCT.md  CONDA-FORGE-SPIKE.md  CONTRIBUTING.md  DEMO.md  DEPENDENCY-AND-EXTENSION-POLICY-NOTES.md  DEPENDENCY-AND-PLUGIN-DESIGN-NOTES.md  MANIFEST.in  Makefile  README.md  RELEASE-CHECKLIST.md  RELEASE-POLICY.md  RUNTIME-COMMAND-CONTRACTS.md  SECURITY.md  SUPPORT.md  pyproject.toml  pytest.ini  setup.py
.github/: BRANCH-PROTECTION.md  BRANCH-RULESETS.md  CODEOWNERS  FUNDING.yml  MAINTAINER-RUNBOOKS.md  RELEASE-NOTES-TEMPLATE.md  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  conda-recipe.yml  pr.yml  release.yml  sbom.yml
data/: customers.csv
docs/: Makefile  README.md  community-discussions.md  file-handler-matrix.md  pipeline-guide.md  requirements.txt  run-history.md
docs/snippets/: installation_version.md
docs/source/: changelog.rst  conf.py  index.rst
etlplus/: README.md  __init__.py  __main__.py  __version__.py  _config.py  cli.py  config.py  ddl.py  enums.py  extract.py  file.py  load.py  mixins.py  run.py  run_helpers.py  transform.py  types.py  utils.py  validate.py
etlplus/api/: README.md  __init__.py  _auth.py  _config.py  _enums.py  _errors.py  _parsing.py  _request_manager.py  _retry_manager.py  _transport.py  _types.py  _utils.py  auth.py  client.py  config.py  endpoint_client.py  enums.py  errors.py  pagination.py  pagination_client.py  paginator.py  rate.py  rate_limit.py  rate_limiter.py  request.py  request_manager.py  response.py  retry_manager.py  transport.py  types.py  utils.py
etlplus/cli/: README.md  __init__.py  _commands.py  _constants.py  _handler_check.py  _handler_common.py  _handler_dataops.py  _handler_history.py  _handler_lifecycle.py  _handler_output.py  _handler_payload.py  _handler_render.py  _handler_run.py  _handlers.py  _history.py  _io.py  _main.py  _options.py  _parsing.py  _state.py  _summary.py  _types.py  app.py  cli.py  commands.py  compat_argparse.py  constants.py  handlers.py  io.py  main.py  options.py  state.py
etlplus/config/: README.md  __init__.py  api.py  connector.py  jobs.py  mixins.py  pagination.py  pipeline.py  profile.py  rate_limit.py  sources.py  targets.py  types.py  utils.py
etlplus/connector/: README.md  __init__.py  _api.py  _connector.py  _core.py  _database.py  _diagnostics.py  _enums.py  _file.py  _queue.py  _types.py  _utils.py  api.py  connector.py  core.py  database.py  enums.py  file.py  types.py  utils.py
etlplus/connectors/: connector.py  enums.py  types.py
etlplus/database/: README.md  __init__.py  _ddl.py  _engine.py  _enums.py  _inferred_column.py  _orm.py  _schema.py  _schema_builder.py  _schemes.py  _sql_dialect.py  _type_resolver.py  _types.py  _value_codec.py  ddl.py  engine.py  orm.py  schema.py  types.py
etlplus/file/: README.md  __init__.py  _archive.py  _binary_codec_handlers.py  _core.py  _core_dispatch.py  _dataframe.py  _enums.py  _handler_abc.py  _imports.py  _io.py  _mixins.py  _module_callables.py  _pandas.py  _pandas_handlers.py  _r.py  _r_handlers.py  _registry.py  _scientific_dataset.py  _scientific_handlers.py  _semi_structured_handlers.py  _sql.py  _statistical_handlers.py  _stub_categories.py  _template_handlers.py  accdb.py  arrow.py  avro.py  base.py  bson.py  cbor.py  cfg.py  conf.py  core.py  csv.py  dat.py  dta.py  duckdb.py  enums.py  feather.py  (+46 more)
etlplus/history/: README.md  __init__.py  _config.py  _models.py  _store.py  _ui.py  _view.py  store.py
etlplus/ops/: README.md  __init__.py  __init__validation.py  _database.py  _enums.py  _files.py  _http.py  _imports.py  _mappings.py  _options.py  _shared.py  _types.py  _utils.py  _validation.py  enums.py  extract.py  http_utils.py  load.py  run.py  run_helpers.py  transform.py  types.py  utils.py  validate.py
etlplus/queue/: README.md  __init__.py  _amqp.py  _aws.py  _azure.py  _base.py  _enums.py  _gcp.py  _location.py  _providers.py  _redis.py  _sqs.py  _types.py
etlplus/runtime/: README.md  __init__.py  _events.py  _logging.py  _readiness.py  _readiness_base.py  _readiness_checks.py  _readiness_connectors.py  _readiness_providers.py  _readiness_strict.py  _readiness_support.py  _scheduler.py  _telemetry.py  events.py  logging.py  readiness.py  telemetry.py
etlplus/storage/: README.md  __init__.py  _abfs.py  _azure_blob.py  _base.py  _enums.py  _ftp.py  _hdfs.py  _http.py  _local.py  _location.py  _registry.py  _remote.py  _remote_buffer.py  _s3.py  _stub.py  abfs.py  azure_blob.py  base.py  enums.py  ftp.py  http.py  local.py  location.py  registry.py  remote.py  s3.py  stub.py
etlplus/telemetry/: README.md  __init__.py  config.py  runtime.py
etlplus/templates/: README.md
etlplus/utils/: README.md  __init__.py  _data.py  _enums.py  _graph.py  _imports.py  _mapping.py  _mixins.py  _numbers.py  _parsing.py  _paths.py  _payloads.py  _secrets.py  _substitution.py  _text.py  _types.py  data.py  enums.py  mapping.py  mixins.py  numbers.py  substitution.py  text.py  types.py
etlplus/validation/: __init__.py  utils.py
etlplus/workflow/: README.md  __init__.py  _dag.py  _errors.py  _jobs.py  _profile.py  _schedule.py  connector.py  jobs.py  pipeline.py  profile.py  utils.py
examples/: README.md  quickstart.py  quickstart_python.py
in/: pipeline.yml
tests/: PERFORMANCE-SMOKE-BASELINES.md  README.md  __init__.py  conftest.py  pytest_file_common.py  pytest_shared_fixtures.py  pytest_shared_support.py  test_api_errors.py  test_cli.py  test_client_session.py  test_extract.py  test_load.py  test_paginate_unit.py  test_pagination_strategy.py  test_pipeline_smoke.py  test_retry_backoff.py  test_retry_network_errors.py  test_transform.py  test_validate.py
tools/: check_commitizen_branch.py  check_release_artifacts.py  render_conda_recipe.py  run_pipeline.py  smoke_test_schema_validation.py  update_demo_snippets.py
(+699 files in other folders)
