[build-system]
# Use a modern setuptools that supports PEP 621 & editable installs (PEP 660).
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etlplus"
version = "0.1.0"
description = "A Swiss Army knife for simple ETL operations"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "ETLPlus Team"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "jinja2>=3.1.6",
  "pyodbc>=5.3.0",
  "python-dotenv>=1.2.1",
  "pandas>=2.3.3",
  "requests>=2.32.5",
]

[project.optional-dependencies]
# Development-only tools (install with: pip install -e .[dev])
dev = [
  "PyYAML>=6.0.3",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "black>=25.9.0",
  "flake8>=7.3.0",
  "ruff>=0.14.4",
  "pydocstyle>=6.3.0",
  "pydoclint>=0.8.1",
]
docs = [
  "sphinx>=4.0.0",
  "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
etlplus = "etlplus.cli:main"

[project.urls]
Homepage = "https://github.com/Dagitali/ETLPlus"
Repository = "https://github.com/Dagitali/ETLPlus"

[tool.setuptools.package-data]
etlplus = ["py.typed"]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["etlplus*"]
exclude = ["tests*", "docs*", "examples*"]

# ------------------------
# Linting / Docstrings
# ------------------------

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
  "etlplus.egg-info",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
]
ignore = [
  # Prefer NumPy one-line summary then sections; allow docstrings on magic methods to be optional
  "D105",  # Missing docstring in magic method
]

# (Docstring enforcement handled by pydocstyle/pydoclint via `make doclint`)

[tool.pydocstyle]
convention = "numpy"
match = '(?!.*__pycache__|.*\.egg-info).+\.py$'
add-ignore = [
  # Keep parity with Ruff ignores for convenience when running pydocstyle directly
  "D105",
]

[tool.pydoclint]
style = "numpy"
require-return-section-when-returning-nothing = false
allow-init-docstring = true
check-return-types = true
check-types-decorators = true
skip-checking-short-docstrings = true
