[build-system]
# Use a modern setuptools that supports PEP 621 & editable installs (PEP 660).
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etlplus"
dynamic = ["version"]
description = "A Swiss Army knife for simple ETL operations"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "ETLPlus Team"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
# The default runtime install is intentionally broad for the stable line: it
# includes the dependencies needed by the documented CLI, etlplus.ops,
# etlplus.api, and the implemented built-in file handlers that ETLPlus treats
# as part of the supported public surface.
dependencies = [
  "cbor2>=5.6.4",
  "duckdb>=1.1.0",
  "fastavro>=1.12.1",
  "jinja2>=3.1.6",
  "msgpack>=1.0.8",
  "odfpy>=1.4.1",
  "openpyxl>=3.1.5",
  "pyodbc>=5.3.0",
  "pyarrow>=22.0.0",
  "pymongo>=4.9.1",
  "python-dotenv>=1.2.1",
  "pandas>=2.3.3",
  "pydantic>=2.12.5",
  "PyYAML>=6.0.3",
  "requests>=2.32.5",
  "SQLAlchemy>=2.0.45",
  "tomli-w>=1.2.0",
  "typer>=0.21.0",
  "xlrd>=2.0.2",
  "xlwt>=1.3.0",
]

[project.optional-dependencies]
# Development-only tools (install with: pip install -e .[dev])
dev = [
  "autopep8>=2.3.2",
  # "black>=25.9.0",
  "build>=1.2.2",
  # "flake8>=7.3.0",
  # "hypothesis>=6.0.0",
  "mypy>=1.19.1",
  "pydoclint>=0.8.1",
  "pydocstyle>=6.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.4",
]
docs = [
  "myst-parser>=5.0.0,<6.0.0",
  "sphinx>=9.1.0",
  "sphinx-rtd-theme>=3.1.0",
  "sphinxcontrib-napoleon>=0.7.0",
]
# Keep the file extra for the narrower scientific/specialty stack that is not
# required for the stable default runtime promise.
file = [
  "netCDF4>=1.7.2",
  "pyreadr>=0.5.2",
  "pyreadstat>=1.3.3",
  # "tables>=3.10.2",
  "xarray>=2024.9.0",
]
storage = [
  "azure-storage-blob>=12.26.0",
  "boto3>=1.40.0",
]

[project.scripts]
etlplus = "etlplus.cli:main"

[project.urls]
Changelog = "https://etlplus.readthedocs.io/en/stable/changelog.html"
Documentation = "https://etlplus.readthedocs.io/en/stable/"
Donate = "https://buymeacoffee.com/djrlj694"
Funding = "https://github.com/sponsors/Dagitali"
Homepage = "https://github.com/Dagitali/ETLPlus"
Repository = "https://github.com/Dagitali/ETLPlus"

# (Docstring enforcement handled by pydocstyle/pydoclint via `make doclint`)

[tool.pydoclint]
style = "numpy"
require-return-section-when-returning-nothing = false
allow-init-docstring = true
check-return-types = true
check-types-decorators = true
skip-checking-short-docstrings = true

[tool.pydocstyle]
convention = "numpy"
match = '(?!.*__pycache__|.*\.egg-info).+\.py$'
add-ignore = [
  # Docstrings follow NumPy style, but these pragmatic exceptions are
  # intentionally tolerated for readability and legacy consistency.
  "D105",  # Missing docstring in magic method
  "D200",  # Allow wrapped single-sentence docstrings
  "D205",  # Allow summary/description without a forced blank separator
  "D400",  # Allow non-period docstring summary endings
]

[tool.mypy]
exclude = '(^|/)(docs|etlplus)/*_(CURRENT|FIXED|OLD|ORIG|NEW)\.py$'

[tool.setuptools.package-data]
etlplus = ["py.typed", "templates/*.j2"]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["etlplus*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
