# pyproject.toml
# ETLPlus
#
# Copyright © 2026 Dagitali LLC. All rights reserved.
#
# Python project configuration and canonical package metadata.
#
# Responsibilities
# - Define build-system requirements and setuptools backend configuration.
# - Declare canonical package metadata, runtime dependencies, optional extras,
#   console scripts, and package data.
# - Configure Python tooling that reads project settings from pyproject.toml.
#
# Maintainer Notes
# - Treat this file as the canonical source for packaging metadata.
# - Keep setup.py as a minimal compatibility shim.
# - Keep uv.lock as a reproducible CI/development environment snapshot, not as
#   package metadata.
#
# References
# - pyproject.toml specification: https://packaging.python.org/en/latest/specifications/pyproject-toml/
# - PEP 621 project metadata: https://peps.python.org/pep-0621/
# - setuptools pyproject configuration: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
# Use a modern setuptools that supports PEP 621 & editable installs (PEP 660).
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etlplus"
dynamic = ["version"]
description = "A Python package and CLI for practical data extraction, validation, transformation, and loading workflows"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "ETLPlus Team"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
# The default runtime install is intentionally broad for the stable line: it
# includes the dependencies needed by the documented CLI, etlplus.ops,
# etlplus.api, and the implemented built-in file handlers that ETLPlus treats
# as part of the supported public surface.
dependencies = [
  "cbor2>=6.1.1",
  "click>=8.4.0",
  "duckdb>=1.5.3",
  "fastavro>=1.12.2",
  "frictionless>=5.19.0",
  "jinja2>=3.1.6",
  "jsonschema>=4.26.0",
  "lxml>=6.1.1",
  "msgpack>=1.1.2",
  "odfpy>=1.4.1",
  "openpyxl>=3.1.5",
  "pyodbc>=5.3.0",
  "pyarrow>=24.0.0",
  "pymongo>=4.17.0",
  "python-dotenv>=1.2.2",
  "pandas>=3.0.3",
  "pydantic>=2.13.4",
  "PyYAML>=6.0.3",
  "requests>=2.34.2",
  "SQLAlchemy>=2.0.49",
  "tomli-w>=1.2.0",
  "typer>=0.25.1",
  "xlrd>=2.0.2",
  "xlwt>=1.3.0",
]

[project.optional-dependencies]
# Development-only tools (install with: pip install -e .[dev])
dev = [
  "autopep8>=2.3.2",
  # "black>=25.9.0",
  "build>=1.5.0",
  # "flake8>=7.3.0",
  # "hypothesis>=6.0.0",
  "mypy>=2.1.0",
  "pydoclint>=0.8.4",
  "pydocstyle>=6.3.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.14",
  "twine>=6.2.0",
]
docs = [
  "myst-parser>=5.1.0,<6.0.0",
  "sphinx>=9.1.0",
  "sphinx-rtd-theme>=3.1.0",
  "sphinxcontrib-napoleon>=0.7",
]
# Keep the file extra for the narrower scientific/specialty stack that is not
# required for the stable default runtime promise.
file = [
  "netCDF4>=1.7.4",
  "pyreadr>=0.5.6",
  "pyreadstat>=1.3.5",
  # "tables>=3.10.2",
  "xarray>=2026.4.0",
]
storage = [
  "azure-storage-blob>=12.29.0",
  "azure-storage-file-datalake>=12.24.0",
  "boto3>=1.43.14",
  "fsspec>=2026.4.0",
]
database-bigquery = [
  "google-cloud-bigquery>=3.38.0",
  "sqlalchemy-bigquery>=1.16.0",
]
database-snowflake = [
  "snowflake-connector-python>=3.10.1",
  "snowflake-sqlalchemy>=1.5.3",
]
queue = [
  "azure-servicebus>=7.14.3",
  "boto3>=1.43.14",
  "google-cloud-pubsub>=2.38.0",
  "pika>=1.4.1",
  "redis>=7.4.0",
]
queue-amqp = [
  "pika>=1.3.2",
]
queue-aws = [
  "boto3>=1.40.0",
]
queue-azure = [
  "azure-servicebus>=7.14.0",
]
queue-gcp = [
  "google-cloud-pubsub>=2.28.0",
]
queue-redis = [
  "redis>=5.2.0",
]
queue-all = [
  "azure-servicebus>=7.14.0",
  "boto3>=1.40.0",
  "google-cloud-pubsub>=2.28.0",
  "pika>=1.3.2",
  "redis>=5.2.0",
]
telemetry = [
  "opentelemetry-api>=1.42.1",
  "opentelemetry-sdk>=1.42.1",
]

[project.scripts]
etlplus = "etlplus.cli:main"

[project.urls]
Changelog = "https://etlplus.readthedocs.io/en/stable/changelog.html"
Documentation = "https://etlplus.readthedocs.io/en/stable/"
Donate = "https://buymeacoffee.com/djrlj694"
Funding = "https://github.com/sponsors/Dagitali"
Homepage = "https://github.com/Dagitali/ETLPlus"
Repository = "https://github.com/Dagitali/ETLPlus"

# (Docstring enforcement handled by pydocstyle/pydoclint via `make doclint`)

[tool.pydoclint]
style = "numpy"
require-return-section-when-returning-nothing = false
allow-init-docstring = true
check-return-types = true
check-types-decorators = true
skip-checking-short-docstrings = true

[tool.pydocstyle]
convention = "numpy"
match = '(?!.*__pycache__|.*\.egg-info).+\.py$'
add-ignore = [
  # Docstrings follow NumPy style, but these pragmatic exceptions are
  # intentionally tolerated for readability and legacy consistency.
  "D105",  # Missing docstring in magic method
  "D200",  # Allow wrapped single-sentence docstrings
  "D205",  # Allow summary/description without a forced blank separator
  "D400",  # Allow non-period docstring summary endings
]

[tool.mypy]
exclude = '''(?x)(
  (^|/)(docs|etlplus)/*_(CURRENT|DEFUNCT|FIXED|NEW|OLD|ORIG)\.py$
  | (^|/)etlplus/*_(CURRENT|DEFUNCT|FIXED|NEW|OLD|ORIG)/
)'''

[tool.setuptools.package-data]
etlplus = ["py.typed", "templates/*.j2"]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["etlplus*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
